Fix Facebook snippet: use viewport width and hide scrollbar

--- a/static/src/snippets/s_facebook_page/000.scss
+++ b/static/src/snippets/s_facebook_page/000.scss
@@ -10,6 +10,7 @@
             display: block;
             width: 100% !important;
             max-width: 100% !important;
+            border: none !important;
         }
     }
 }
